--- a/style.css
+++ b/style.css
@@ -66,6 +66,12 @@ a {
     gap: 1em;
 }
 
+.row3 {
+    display: flex;
+    flex-direction: row;
+    gap: 0.5em;
+}
+
 .sidebar {
     display: flex;
     flex-direction: column;
@@ -236,6 +242,131 @@ a {
     border-radius: 10px;
 }
 
+.tvch {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    border-radius: 10px;
+    gap: 1em;
+    width: 15em;
+}
+
+.tvheader {
+    display: flex;
+    flex-direction: row;
+    padding: 1em;
+    border-radius: 1em;
+    height: fit-content;
+}
+
+.tvlogo {
+    height: 1em;
+    width: fit-content;
+}
+
+.tventries {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+
+.tventry a {
+    display: flex;
+    flex-direction: row;
+    gap: 1em;
+}
+
+#tventryimg {
+    width: 6em;
+    height: fit-content;
+    border-radius: 0.5em;
+}
+
+.tvtext {
+    display: flex;
+    flex-direction: column;
+    gap: 0.25em;
+}
+
+.tvtextnext {
+    display: flex;
+    flex-direction: row;
+    gap: 1em;
+}
+
+#tvtitle {
+    font-size: 20px;
+}
+
+#tvtime {
+    opacity: 0.5;
+}
+
+.tvtime {
+    opacity: 0.5;
+}
+
+.prlogo {
+    display: flex;
+    justify-content: center;
+    height: 1em;
+    width: 1em;
+    padding: 0.1em;
+}
+
+#logo {
+    width: 100%;
+}
+
+#prentries {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+
+.more {
+    display: flex; 
+    opacity: 0.5; 
+    padding: 1em; 
+    background-color: #1E1F29;
+}
+
+.prentry a {
+    display: flex;
+    flex-direction: row;
+    gap: 1em;
+}
+
+.prentryimg {
+    width: 10em;
+    height: fit-content;
+    border-radius: 0.5em;
+}
+
+.prtext {
+    display: flex;
+    flex-direction: column;
+    gap: 0.25em;
+}
+
+.prtextnext {
+    display: flex;
+    flex-direction: row;
+    gap: 1em;
+}
+
+#prtitle {
+    font-size: 20px;
+}
+
+#prtime {
+    opacity: 0.5;
+}
+
+.prtime {
+    opacity: 0.5;
+}
+
 #ch1 {
     background-color: #00387E;
 }
@@ -274,6 +405,7 @@ a {
 
 #rt {
     background-color: #77BC1F;
+    color: #000;
 }
 
 #cnn {
@@ -679,6 +811,12 @@ a {
     gap: 1em;
 }
 
+.row3 {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5em;
+}
+
 .sidebar {
     display: none;
     flex-direction: column;
@@ -858,6 +996,146 @@ h2 {
     width: 400px;
     padding: 20px;
     border-radius: 10px;
+}
+
+.tvch {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    border-radius: 10px;
+    gap: 1em;
+    width: 100%;
+}
+
+.tvheader {
+    display: flex;
+    flex-direction: row;
+    padding: 3em;
+    border-radius: 1em;
+    height: fit-content;
+}
+
+.tvlogo {
+    height: 4em;
+    width: fit-content;
+}
+
+.tventries {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+
+.tventry a {
+    display: flex;
+    flex-direction: row;
+    gap: 1em;
+}
+
+#tventryimg {
+    width: 50%;
+    height: fit-content;
+    border-radius: 0.5em;
+}
+
+.tvtext {
+    display: flex;
+    flex-direction: column;
+    gap: 0.25em;
+}
+
+.tvtextnext {
+    display: flex;
+    flex-direction: row;
+    gap: 1em;
+}
+
+#tvtitle {
+    font-size: 50px;
+}
+
+#tvtime {
+    font-size: 25px;
+    opacity: 0.5;
+}
+
+.tvtitle {
+    font-size: 25px;
+}
+
+.tvtime {
+    font-size: 25px;
+    opacity: 0.5;
+}
+
+.prlogo {
+    display: flex;
+    justify-content: center;
+    height: 4em;
+    width: 100%;
+    padding: 0.1em;
+}
+
+#logo {
+    width: 50%;
+}
+
+#prentries {
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
+}
+
+.more {
+    display: flex; 
+    opacity: 0.5; 
+    padding: 1em 0; 
+    font-size: 50px;
+    width: 100%;
+    justify-content: center;
+    background-color: #1E1F29;
+}
+
+.prentry a {
+    display: flex;
+    flex-direction: row;
+    gap: 1em;
+}
+
+.prentryimg {
+    width: 50%;
+    height: fit-content;
+    border-radius: 0.5em;
+}
+
+.prtext {
+    display: flex;
+    flex-direction: column;
+    gap: 0.25em;
+}
+
+.prtextnext {
+    display: flex;
+    flex-direction: row;
+    gap: 1em;
+}
+
+#prtitle {
+    font-size: 50px;
+}
+
+#prtime {
+    font-size: 30px;
+    opacity: 0.5;
+}
+
+.prtitle {
+    font-size: 50px;
+}
+
+.prtime {
+    font-size: 50px;
+    opacity: 0.5;
 }
 
 .vcontent {
